added home page and contact page

--- a/index.html
+++ b/index.html
@@ -1,14 +1,69 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Scien'Tastiq | La science à l'école en Ile de France</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Orbitron:wght@700&family=Roboto:ital,wght@0,300;0,400;0,700;0,900;1,700;1,900&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="./CSS/general.css">
+  <link rel="stylesheet" href="./CSS/index.css">
 </head>
 
-<body>
+<body class="home-body">
+  <div class="main-wrapper">
+    <header>
+      <a href="./index.html" class="logo">Scien'Tastiq</a>
+      <nav>
+        <ul>
+          <li>
+            <a href="./ateliers.html">Ateliers</a>
+          </li>
+          <li>
+            <a href="./qui-sommes-nous.html">Qui sommes nous ?</a>
+          </li>
+          <li>
+            <a href="./tarifs.html">Tarifs</a>
+          </li>
+          <li>
+            <a href="./contact.html">Contact</a>
+          </li>
+          <li>
+            <a href="./dons-remerciements.html">Dons & Remerciements</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main class="home-page">
+      <h1>Expérimentons !</h1>
+      <div class="home-description">
+        <p>Les sciences nous paraissent parfois compliquées, pas toujours accessibles, mais elles font tout de même
+          partie
+          de notre histoire, de la culture, et envahissent notre quotidien (nous vivons dans une société
+          technologique...)
+          <br />
+          <br />
+          Notre association se propose d’aider les plus jeunes à mobiliser leur (naturelle) curiosité pour appréhender
+          les
+          sciences, la démarche scientifique, et se découvrir les compétences d’un vrai petit scientifique en herbe !
+          Expérimenter, observer, analyser, ... et s’émerveiller !
+        </p>
+        <a href="./ateliers.html" class="button">Ce que nous proposons</a>
+        <!-- <div class="carousel">
+          <img src="./assets/photos/IMG_20191217_095325.jpg" alt="">
+          <img src="./assets/photos/IMG_20210527_102230.jpg" alt="">
+          <img src="./assets/photos/IMG_20210527_102230.jpg" alt="">
+          <img src="./assets/photos/IMG_20210625_151251.jpg" alt="">
+        </div> -->
+
+      </div>
+    </main>
+  </div>
 
 </body>
 
